@@ -23,41 +23,41 @@
 # These are examples.  Customize them to suit your configuration.
 
 # ping loss for some hosts, ping rta for a subset of those
-PING=host1,PING&db=ping,rta
-PING=host1,PING&db=ping,losspct
-PING=host2,PING&db=ping,losspct
-PING=host3,PING&db=ping,losspct
-PING=host4,PING&db=ping,rta
-PING=host4,PING&db=ping,losspct
-PING=host5,PING&db=ping,losspct
+#PING=host1,PING&db=ping,rta
+#PING=host1,PING&db=ping,losspct
+#PING=host2,PING&db=ping,losspct
+#PING=host3,PING&db=ping,losspct
+#PING=host4,PING&db=ping,rta
+#PING=host4,PING&db=ping,losspct
+#PING=host5,PING&db=ping,losspct
 
 # hosts and services important to customer 1
-Customer1=gateway1,PING&db=ping,rta
-Customer1=host1,PING&db=ping,rta
-Customer1=host1,HTTP&db=http
-Customer1=mail1,SMTP: mailq&db=mailq,qsize
+#Customer1=gateway1,PING&db=ping,rta
+#Customer1=host1,PING&db=ping,rta
+#Customer1=host1,HTTP&db=http
+#Customer1=mail1,SMTP: mailq&db=mailq,qsize
 
 # hosts and services important to customer 2
-Customer2=gateway2,PING&db=ping,rta
-Customer2=host2,PING&db=ping,rta
-Customer2=host2,HTTP&db=http
+#Customer2=gateway2,PING&db=ping,rta
+#Customer2=host2,PING&db=ping,rta
+#Customer2=host2,HTTP&db=http
 
 # mail servers
-Mail Servers=mail00,PING&db=ping,losspct
-Mail Servers=mail00,SMTP: mailq&db=mailq,qsize
-Mail Servers=mail01,PING&db=ping,losspct
-Mail Servers=mail01,SMTP: mailq&db=mailq,qsize
+#Mail Servers=mail00,PING&db=ping,losspct
+#Mail Servers=mail00,SMTP: mailq&db=mailq,qsize
+#Mail Servers=mail01,PING&db=ping,losspct
+#Mail Servers=mail01,SMTP: mailq&db=mailq,qsize
 
 # report of ping and http latency on web servers
-Web Servers=http00,PING&db=ping,losspct
-Web Servers=http00,HTTP&db=http
-Web Servers=http01,PING&db=ping,losspct
-Web Servers=http01,HTTP&db=http
-Web Servers=http02,PING&db=ping,losspct
-Web Servers=http02,HTTP&db=http
+#Web Servers=http00,PING&db=ping,losspct
+#Web Servers=http00,HTTP&db=http
+#Web Servers=http01,PING&db=ping,losspct
+#Web Servers=http01,HTTP&db=http
+#Web Servers=http02,PING&db=ping,losspct
+#Web Servers=http02,HTTP&db=http
 
 # network and disk information about two backup servers
-Backup=backup0,net&db=net,bytes-trasmitted&db=net,bytes-received
-Backup=backup0,Partition: /&db=diskgb
-Backup=backup1,net&db=net,bytes-trasmitted&db=net,bytes-received
-Backup=backup1,Partition: /&db=diskgb
+#Backup=backup0,net&db=net,bytes-trasmitted&db=net,bytes-received
+#Backup=backup0,Partition: /&db=diskgb
+#Backup=backup1,net&db=net,bytes-trasmitted&db=net,bytes-received
+#Backup=backup1,Partition: /&db=diskgb
