@@ -44,10 +44,15 @@ stylesheet = /nagiosgraph/nagiosgraph.css
 # Location of showservice control file (optional)
 #servdb = /etc/nagiosgraph/servdb.conf
 
-# Location of showgroup control file (required for showgroup.cgi)
-groupdb = /etc/nagiosgraph/groupdb.conf
+# Groups can be enumerated explicitly in the groupdb file, gathered
+# automatically from the service group definitions in the Nagios
+# configuration, or a combination of both.
+# Location of showgroup control file (optional)
+#groupdb = /etc/nagiosgraph/groupdb.conf
+# Location of the Nagios configuration file (optional)
+#groupcfgfile = /etc/nagios/nagios.cfg
 
-# File containing data sets that should be selected in queries (optional)
+# File containing sets of data sources to select in queries (optional)
 #datasetdb = /etc/nagiosgraph/datasetdb.conf
 
 # Access control configuration (optional)
